--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                                                                     <span>SECT (2025) (PDF)</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://yottajunaid.github.io/SECT_Internship_Project/">link</a></span>
+                                                                    <span><a href="https://yottajunaid.github.io/SECT_Internship_Project/" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description"> Performed Reconnaissance, Vulnerability Assessment, Data Breach Analysis and OWASP Mapping on tendermines.com and documented it in a report</p>
@@ -571,7 +571,7 @@
                                                                     <span>Final year project (GUI)</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">An Offensive software which can crack around 22 Hashing algorithms using Brute-Force, Probabilistic attack, Rule-Based, Wordlist and RainbowTable</p>
@@ -588,7 +588,7 @@
                                                                     <span>GUI</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/SimpleSlate">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/SimpleSlate" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">A Simple platform independent Note making application designed in python</p>
@@ -605,7 +605,7 @@
                                                                     <span>GUI/CLI</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/Zip-CrackerX">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/Zip-CrackerX" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">A Zip file cracker programmed in Python with CLI as well as GUI. It is compatible to crack zip file having "Zip Legacy Encryption" by using Bruteforce</p>
@@ -622,7 +622,7 @@
                                                                     <span>CLI</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/DarkwebHoster">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/DarkwebHoster" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">An Awesome tool to convert your localhost into a Darkweb Server</p>
@@ -639,7 +639,7 @@
                                                                     <span>PDF</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/TOR-Forensics">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/TOR-Forensics" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">An Awesome list of study material fetched from darkweb for learning TOR Forensics or Darkweb Forensics</p>
@@ -656,7 +656,7 @@
                                                                     <span>CLI</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/ps1-script-runner">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/ps1-script-runner" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">Run any ps1 script in Windows Home Edition without restrictions</p>
@@ -673,7 +673,7 @@
                                                                     <span>CLI</span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://github.com/yottajunaid/cityhash128-converter">link</a></span>
+                                                                    <span><a href="https://github.com/yottajunaid/cityhash128-converter" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">Convert plaintext to cityhash-128 hash</p>
@@ -709,7 +709,7 @@
                                                                     <span>Udemy (May 1, 24) </span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://www.ude.my/UC-01f36047-7d63-4b78-a103-9090f7187999">link</a></span>
+                                                                    <span><a href="https://www.ude.my/UC-01f36047-7d63-4b78-a103-9090f7187999" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">• Acquired expertise in procedural programming paradigms and associated logical concepts, enhancing capabilities.<br> 
@@ -729,7 +729,7 @@
                                                                     <span>Udemy (June 26, 24) </span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://www.ude.my/UC-605b65e8-abcb-4a99-8d59-423af436f984">link</a></span>
+                                                                    <span><a href="https://www.ude.my/UC-605b65e8-abcb-4a99-8d59-423af436f984" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">• Acquired expertise in digital forensics, evidence collection and preparation.<br> 
@@ -747,7 +747,7 @@
                                                                     <span>Udemy (January 10, 25) </span>
                                                                 </div>
                                                                 <div class="date-of-time">
-                                                                    <span><a href="https://www.udemy.com/certificate/UC-51dcf3c5-623c-424a-8350-16544cd0e4f7/">link</a></span>
+                                                                    <span><a href="https://www.udemy.com/certificate/UC-51dcf3c5-623c-424a-8350-16544cd0e4f7/" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
                                                             <p class="description">• Acquired expertise in Penetration testing & Bug Bounty Hunting using various tools and frameworks.<br> 
