--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                                     <h5 style="color: #5b5b5b;">Aka <span style="color: #853ccf;">yottajunaid</span>
                                                     </h5>
                                                 </h2>
-                                                <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations
+                                                <p class="disc">A cybersecurity nerd, I am interested in Cybersecurity, OSINT, OWASP, Deep and Dark web Investigations.<br>7+ years of personal(non-industial) experience on Dark web research 
                                                 </p>
                                             </div>
                                             <div class="user-info-footer">
