--- a/index.html
+++ b/index.html
@@ -484,14 +484,38 @@
         </div>
     </div>
 </div>
-<div class="col-lg-12">
+<!-- <div class="col-lg-12">
         <div class="section-title justify-content-center">
             <h4 class="maintitle tryhackme-title mt--40">TryHackme Badge</h4>
             <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none;'></iframe>
         </div>
+</div> -->
+<div class="col-lg-12">
+  <div class="section-title justify-content-center">
+    <h4 class="maintitle tryhackme-title mt--40">TryHackMe Badges</h4>
+  </div>
+
+  <!-- Badge Grid -->
+  <div class="badge-grid">
+    <div class="badge-card">
+      <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none;'></iframe>
+      <p>TryHackMe Profile Card</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge2.png" alt="Badge 2">
+      <p>Badge Name 2</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge3.png" alt="Badge 3">
+      <p>Badge Name 3</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge4.png" alt="Badge 4">
+      <p>Badge Name 4</p>
+    </div>
+  </div>
 </div>
-
-
+                                    
                                 </div>
                             </div>
                             <!-- End Single Tab  -->
