--- a/index.html
+++ b/index.html
@@ -497,21 +497,34 @@
 
   <!-- Badge Grid -->
   <div class="badge-grid">
-    <div class="badge-card">
       <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none;'></iframe>
-      <p>TryHackMe Profile Card</p>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge1.svg" alt="Badge 1">
+      <p>Certified Red Teamer</p>
     </div>
     <div class="badge-card">
-      <img src="assets/images/badges/badge2.png" alt="Badge 2">
-      <p>Badge Name 2</p>
+      <img src="assets/images/badges/badge2.svg" alt="Badge 2">
+      <p>ADversary</p>
     </div>
     <div class="badge-card">
-      <img src="assets/images/badges/badge3.png" alt="Badge 3">
-      <p>Badge Name 3</p>
+      <img src="assets/images/badges/badge3.svg" alt="Badge 3">
+      <p>Burp'ed</p>
     </div>
     <div class="badge-card">
-      <img src="assets/images/badges/badge4.png" alt="Badge 4">
-      <p>Badge Name 4</p>
+      <img src="assets/images/badges/badge4.svg" alt="Badge 4">
+      <p>Terminated!</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge5.svg" alt="Badge 5">
+      <p>Shield Apprentice</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge6.svg" alt="Badge 6">
+      <p>Hacking for 30 days</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge7.svg" alt="Badge 7">
+      <p>cat linux.txt</p>
     </div>
   </div>
 </div>
