--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
   <!-- Badge Grid -->
   <div class="badge-grid">
       <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none;'></iframe>
-    <div class="badge-card">
+    <div class="badge-card" style="margin-left: 40px;">
       <img src="assets/images/badges/badge1.svg" alt="Badge 1">
       <p>Certified Red Teamer</p>
     </div>
