--- a/index.html
+++ b/index.html
@@ -920,6 +920,7 @@
                             <li><a href="#">Buy me a Coffee</a></li>
                             <li><a href="#">Darkweb</a></li>
                             <li><a href="#">Databases</a></li>
+                            <li><a href="https://orange-cyberdefense.github.io/ocd-mindmaps/img/mindmap_ad_dark_classic_2025.03.excalidraw.svg">OCD Mindmap</a></li>
                         </ul>
                     </div>
                 </div>
