--- a/index.html
+++ b/index.html
@@ -740,6 +740,29 @@
                                                         <div class="inner">
                                                             <div class="heading">
                                                                 <div class="title">
+                                                                    <h4> Red Teaming</h4>
+                                                                    <span>TryHackMe (Aug 24, 25) </span>
+                                                                </div>
+                                                                <div class="date-of-time">
+                                                                    <span><a href="https://tryhackme.com/certificate/THM-DTPRR0SWA5" style="color: inherit">link</a></span>
+                                                                </div>
+                                                            </div>
+                                                            <p class="description">• Performed Active and Passive Reconnaissance
+• Used diverse techniques for initial access
+• Performed Phishing attacks
+• Enumerate and persist on targets
+• Performed Network Security Evasion
+• Evade security solutions
+• Exploit Active Directory</p>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End Single List  -->
+                                                    
+                                                    <!-- Start Single List  -->
+                                                    <div class="resume-single-list">
+                                                        <div class="inner">
+                                                            <div class="heading">
+                                                                <div class="title">
                                                                     <h4> 100 Days of Code: The Complete Python Bootcamp</h4>
                                                                     <span>Udemy (May 1, 24) </span>
                                                                 </div>
@@ -914,13 +937,14 @@
                 <div class="col-sl-3 col-12 mt_sm--20 col-lg-3 col-md-6 col-sm-6 col-12">
                     <div class="menu-wrapper">
                         <div class="menu-title">
-                            <h6>Links <h8>(Not yet Activated)</h8></h6>
+                            <h6>Links</h6>
                         </div>
                         <ul class="menu-footer">
                             <li><a href="#">Buy me a Coffee</a></li>
                             <li><a href="#">Darkweb</a></li>
                             <li><a href="#">Databases</a></li>
                             <li><a href="https://orange-cyberdefense.github.io/ocd-mindmaps/img/mindmap_ad_dark_classic_2025.03.excalidraw.svg">OCD Mindmap</a></li>
+                            <li><a href="https://github.com/CyberAlbSecOP/Awesome_CyberSec_Bible">RED TEAMING BIBLE</a></li>
                         </ul>
                     </div>
                 </div>
