--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@
   </div>
 
   <!-- Badge Grid -->
-  <div class="badge-grid">
       <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none; width:340px; height:120px;'></iframe>
-    <div class="badge-card" style="margin-left: 40px;">
+    <div class="badge-grid">
+    <div class="badge-card">
       <img src="assets/images/badges/badge1.svg" alt="Badge 1">
       <p>Certified Red Teamer</p>
     </div>
@@ -747,12 +747,12 @@
                                                                     <span><a href="https://tryhackme.com/certificate/THM-DTPRR0SWA5" style="color: inherit">link</a></span>
                                                                 </div>
                                                             </div>
-                                                            <p class="description">• Performed Active and Passive Reconnaissance
-• Used diverse techniques for initial access
-• Performed Phishing attacks
-• Enumerate and persist on targets
-• Performed Network Security Evasion
-• Evade security solutions
+                                                            <p class="description">• Performed Active and Passive Reconnaissance<br>
+• Used diverse techniques for initial access<br>
+• Performed Phishing attacks<br>
+• Enumerate and persist on targets<br>
+• Performed Network Security Evasion<br>
+• Evade security solutions<br>
 • Exploit Active Directory</p>
                                                         </div>
                                                     </div>
