--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>My Portfolio</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="I am Junaid Nizam Quadri, a Darkweb Geek">
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="I am yottajunaid, real name is Junaid Nizam Quadri, a Darkweb Geek">
+    <meta name="keywords" content="yottajunaid, Junaid Quadri, Python Programmer, Portfolio, Darkweb Expert, OSINT, Red Teamer">
+    <meta name="author" content="yottajunaid">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Open Graph for better sharing -->
+    <meta property="og:title" content="Junaid Quadri | Darkweb Expert">
+    <meta property="og:description" content="Explore the portfolio of Junaid Quadri">
+    <meta property="og:image" content="https://yottajunaid.github.io/portfolio/assets/images/logo/preview.jpg">
+    <meta property="og:url" content="https://yottajunaid.github.io/portfolio/">
+    <!-- Canonical URL (avoids duplicate content issues) -->
+    <link rel="canonical" href="https://yottajunaid.github.io/portfolio/">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/logo-dark.png">
     <!-- CSS 
@@ -19,6 +28,27 @@
     <link rel="stylesheet" href="assets/css/plugins/feature.css">
     <!-- Style css -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <script type="application/ld+json">
+    {
+     "@context": "https://schema.org",
+     "@type": "Person",
+     "name": "yottajunaid",
+     "url": "https://yottajunaid.github.io/portfolio/",
+     "image": "https://yottajunaid.github.io/portfolio/assets/images/logo/preview.jpg",
+     "jobTitle": "Darkweb Expert",
+     "worksFor": {
+      "@type": "Organization",
+      "name": "Open to Work / Independent / Freelance /"
+    },
+     "sameAs": [
+     "https://github.com/yottajunaid",
+     "https://www.linkedin.com/in/junaid-quadri-084279241/",
+     ],
+     "knowsAbout": ["Dark web", "Deep web", "OSINT", "Ethical Hacking", "Digital Forensics", "Python", "Cybersecurity", "Web Development", "Cloud"]
+    }
+</script>
+
 </head>
 
 <body class="template-color-1 spybody white-version" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
