--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph for better sharing -->
     <meta property="og:title" content="Junaid Quadri | Darkweb Expert">
     <meta property="og:description" content="Explore the portfolio of Junaid Quadri">
-    <meta property="og:image" content="https://yottajunaid.github.io/portfolio/assets/images/logo/preview.jpg">
+    <meta property="og:image" content="https://yottajunaid.github.io/portfolio/assets/images/logo/preview.png">
     <meta property="og:url" content="https://yottajunaid.github.io/portfolio/">
     <!-- Canonical URL (avoids duplicate content issues) -->
     <link rel="canonical" href="https://yottajunaid.github.io/portfolio/">
@@ -35,7 +35,7 @@
      "@type": "Person",
      "name": "yottajunaid",
      "url": "https://yottajunaid.github.io/portfolio/",
-     "image": "https://yottajunaid.github.io/portfolio/assets/images/logo/preview.jpg",
+     "image": "https://yottajunaid.github.io/portfolio/assets/images/logo/preview.png",
      "jobTitle": "Darkweb Expert",
      "worksFor": {
       "@type": "Organization",
