--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
      "https://github.com/yottajunaid",
      "https://www.linkedin.com/in/junaid-quadri-084279241/",
      ]
-     "knowsAbout": ["Dark web", "Deep web", "OSINT", "Ethical Hacking", "Digital Forensics", "Python", "Cybersecurity", "Web Development", "Cloud"]
+     "knowsAbout": [
+        "Dark web", 
+        "Deep web", 
+        "OSINT", 
+        "Ethical Hacking", 
+        "Digital Forensics", 
+        "Python", 
+        "Cybersecurity", 
+        "Web Development", 
+        "Cloud"
+        ]
     }
 </script>
 
