--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
      "https://www.linkedin.com/in/junaid-quadri-084279241/"
      ]
      "knowsAbout": [
-        "Dark web", 
-        "Deep web", 
-        "OSINT", 
+        "OSINT",
+        "Dark-web", 
+        "Deep-web",  
         "Ethical Hacking", 
         "Digital Forensics", 
         "Python", 
