--- a/index.html
+++ b/index.html
@@ -984,7 +984,8 @@
                             <li><a href="#">Darkweb</a></li>
                             <li><a href="#">Databases</a></li>
                             <li><a href="https://orange-cyberdefense.github.io/ocd-mindmaps/img/mindmap_ad_dark_classic_2025.03.excalidraw.svg">OCD Mindmap</a></li>
-                            <li><a href="https://github.com/CyberAlbSecOP/Awesome_CyberSec_Bible">RED TEAMING BIBLE</a></li>
+                            <li><a href="https://github.com/CyberAlbSecOP/Awesome_CyberSec_Bible">Red Teaming Bible</a></li>
+                            <li><a href="https://cosmic-zip.github.io/">The Netrruner Guide</a></li>
                         </ul>
                     </div>
                 </div>
