--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
                     <div class="menu-wrapper">
                         <div class="menu-title">
                             <h6>Links</h6>
-                        </div>
+                        </div class="footer-links">
                         <ul class="menu-footer">
                             <li><a href="#">Buy me a Coffee</a></li>
                             <li><a href="#">Darkweb</a></li>
@@ -987,6 +987,11 @@
                             <li><a href="https://github.com/CyberAlbSecOP/Awesome_CyberSec_Bible">Red Teaming Bible</a></li>
                             <li><a href="https://cosmic-zip.github.io/">The Netrruner Guide</a></li>
                         </ul>
+                        <ul class="menu-footer">
+                            <li><a href="https://github.com/Idnan/bash-guide">The Bash Guide</a></li>
+                        
+                        </ul>
+                 
                     </div>
                 </div>
             </div>
