--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
                     <div class="menu-wrapper">
                         <div class="menu-title">
                             <h6>Links</h6>
-                        </div class="footer-links">
+                        <div class="footer-links">
                         <ul class="menu-footer">
                             <li><a href="#">Buy me a Coffee</a></li>
                             <li><a href="#">Darkweb</a></li>
@@ -999,6 +999,8 @@
         <div class="copyright text-center ptb--40 section-separator">
             <p class="description">© 2025. I can do this all day <a target="_blank" href="#">!</a></p>
         </div>
+    </div>
+    </div>
     </div>
     <!-- Rn footer area end -->
     <!-- JS ============================================ -->
