--- a/index.html
+++ b/index.html
@@ -988,13 +988,12 @@
                             <li><a href="https://cosmic-zip.github.io/">The Netrruner Guide</a></li>
                         </ul>
                         <ul class="menu-footer">
-                            <li><a href="https://github.com/Idnan/bash-guide">The Bash Guide</a></li>
-                        
-                        </ul>
-                 
+                            <li><a href="https://github.com/Idnan/bash-guide">The Bash Guide</a></li>                    
+                        </ul>          
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         </div>
     </div>
