--- a/index.html
+++ b/index.html
@@ -539,6 +539,10 @@
       <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=4025438" style='border:none; width:340px; height:120px;'></iframe>
     <div class="badge-grid">
     <div class="badge-card">
+      <img src="assets/images/badges/badge8.svg" alt="Badge 8">
+      <p>Red-Team of the Month</p>
+    </div>
+    <div class="badge-card">
       <img src="assets/images/badges/badge1.svg" alt="Badge 1">
       <p>Certified Red Teamer</p>
     </div>
