--- a/index.html
+++ b/index.html
@@ -555,6 +555,14 @@
       <p>Burp'ed</p>
     </div>
     <div class="badge-card">
+      <img src="assets/images/badges/badge9.svg" alt="Badge 9">
+      <p>OWASP Top 10</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge10.svg" alt="Badge 10">
+      <p>Metasploitable</p>
+    </div>
+    <div class="badge-card">
       <img src="assets/images/badges/badge4.svg" alt="Badge 4">
       <p>Terminated!</p>
     </div>
@@ -563,12 +571,20 @@
       <p>Shield Apprentice</p>
     </div>
     <div class="badge-card">
+      <img src="assets/images/badges/badge7.svg" alt="Badge 7">
+      <p>cat linux.txt</p>
+    </div>
+    <div class="badge-card">
       <img src="assets/images/badges/badge6.svg" alt="Badge 6">
       <p>Hacking for 30 days</p>
     </div>
     <div class="badge-card">
-      <img src="assets/images/badges/badge7.svg" alt="Badge 7">
-      <p>cat linux.txt</p>
+      <img src="assets/images/badges/badge11.svg" alt="Badge 11">
+      <p>Hacking for 90 days</p>
+    </div>
+    <div class="badge-card">
+      <img src="assets/images/badges/badge12.svg" alt="Badge 12">
+      <p>Hacking for 180 days</p>
     </div>
   </div>
 </div>
